fixed padding on the card to align text layout

--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -39,3 +39,12 @@
   font-weight: bold;
   font-size: 13px;
 }
+
+.card-body {
+  padding: 20px 40px;
+}
+
+.card-body:focus {
+  outline-color: #BADA55;
+  outline-width: 2px;
+}
